Revert "Refactoring of controllers"