@@ -5,7 +5,6 @@ import ua.pz33.utils.configuration.ConfigurationMediator;
 import ua.pz33.utils.configuration.PropertyChangedEventArgs;
 
 import java.awt.*;
-import java.awt.desktop.SystemEventListener;
 import java.lang.ref.WeakReference;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -34,7 +33,7 @@ public class GameClock implements ConfigurationListener {
 
     @SuppressWarnings("BusyWait")
     private void clockThreadRun() {
-        long currMillis = System.currentTimeMillis() - 1000 / TICKS_PER_SECOND;
+        long currMillis = System.currentTimeMillis() - 100;
 
         while (true) {
             if (!isPaused) {
@@ -92,7 +91,6 @@ public class GameClock implements ConfigurationListener {
             try {
                 observer.onTick();
             } catch (Exception ignored) {
-                ignored.printStackTrace();
             }
         }
 
@@ -105,12 +103,12 @@ public class GameClock implements ConfigurationListener {
 
         observers.stream()
                 .filter(wr -> wr.get() == null)
-                .toList()
+                .collect(Collectors.toList())
                 .forEach(observers::remove);
 
         delayedRunners.stream()
                 .filter(PostExecuteObserver::canBeDeleted)
-                .toList()
+                .collect(Collectors.toList())
                 .forEach(delayedRunners::remove);
     }
 
